--- a/Game/CSS/mstyle.css
+++ b/Game/CSS/mstyle.css
@@ -237,7 +237,7 @@ body {
    animation: reset-fade 0.5s forwards;
 }
 
-.database, .calculator, .privacy {
+.database, .calculator, .privacy, .manager {
     margin-bottom: 5px;
     width: 80%;
     height: 40px;
@@ -251,7 +251,7 @@ body {
     cursor: pointer;
 }
 
-.database:hover, .calculator:hover, .privacy:hover {
+.database:hover, .calculator:hover, .privacy:hover, .manager:hover {
     scale: 1.05;
 }
 
