--- a/Game/CSS/404.css
+++ b/Game/CSS/404.css
@@ -58,7 +58,7 @@ h1, h2, .removed, .returnp {
   text-align: center;
 }
 
-.database, .calculator {
+.database, .calculator, .manager, .game {
   width: 25%;
   height: 40px;
   border: solid lightgray;
@@ -69,7 +69,7 @@ h1, h2, .removed, .returnp {
   display:inline-table;
 }
 
-.database:hover, .calculator:hover {
+.database:hover, .calculator:hover, .manager:hover, .game:hover {
   opacity: 0.9;
   border-color: lightblue;
   color: lightblue;
@@ -383,7 +383,7 @@ opacity: 1;
   color: white;
 }
 
-.database, .calculator, .privacy {
+.database, .calculator, .privacy, .manager, .game {
   margin-bottom: 5px;
   width: 80%;
   height: 40px;
@@ -397,9 +397,8 @@ opacity: 1;
   cursor: pointer;
 }
 
-.database:hover, .calculator:hover, .privacy:hover {
+.database:hover, .calculator:hover, .privacy:hover, .manager:hover, .game:hover {
   scale: 1.05;
-  
 }
 
 .code404 {
