--- a/Game/CSS/mlightstyle.css
+++ b/Game/CSS/mlightstyle.css
@@ -69,7 +69,7 @@ body {
     background-color: rgba(255, 0, 0, 0.3);
 }
 
-.database, .calculator, .privacy {
+.database, .calculator, .privacy, .manager {
     border-color: #ccc; 
     color: #333; 
 }
