--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -36,7 +36,7 @@
     font-size: large;
     cursor: pointer;
     border-radius: 10px;
-    border: 2px aquamarine solid;
+    border: 2px rgb(185, 33, 255) solid;
     padding: 5px;
     min-width: 140px;
     text-align: center;
